# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TimeController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -19,11 +20,16 @@ use Illuminate\Support\Facades\Route;
 //Route::post('/register', [AuthController::class, 'register']);
 //Route::post('/login', [AuthController::class, 'login']);
 
-Route::post('/times', [TimeController::class, 'store']);
-Route::get('/times/{id}', [TimeController::class, 'show']);
-Route::get('/times', [TimeController::class, 'index']);
+
+Route::post('/register', [AuthController::class, 'register']);
+Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('auth:sanctum')->group(function () {
-    //Route::post('/time', [TimeController::class, 'store']);
+    Route::post('/times', [TimeController::class, 'store']);
+    Route::get('/times/{id}', [TimeController::class, 'show']);
+    Route::get('/times', [TimeController::class, 'index']);
+    Route::get('/user/times', [TimeController::class, 'showUserTimes']);
 });
+
+Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout']);
 
